--- a/gendata.ipynb
+++ b/gendata.ipynb
@@ -30,7 +30,7 @@
     "patient id list \n",
     "['TCGA-LN-A49R','TCGA-2H-A9GQ','TCGA-LN-A4A3',....]\n",
     "'''\n",
-    "patients = joblib.load('patients.pkl')"
+    "patients = joblib.load('patients.pkl')#病人前十位编号"
    ]
   },
   {
@@ -47,7 +47,7 @@
     " ...\n",
     " }\n",
     "'''\n",
-    "sur_and_time = joblib.load('sur_and_time.pkl')"
+    "sur_and_time = joblib.load('sur_and_time.pkl')#是否存活和存活时间"
    ]
   },
   {
@@ -57,14 +57,14 @@
    "outputs": [],
    "source": [
     "patient_sur_type = {}\n",
-    "for x in patients: \n",
-    "    patient_sur_type[x] = sur_and_time[x][0]\n",
+    "for x in patients:\n",
+    "    patient_sur_type[x] = sur_and_time[x][0] #是否存活\n",
     "\n",
     "time = []\n",
     "patient_and_time = {}\n",
     "for x in patients:\n",
     "    time.append(sur_and_time[x][-1])\n",
-    "    patient_and_time[x] = sur_and_time[x][-1]\n"
+    "    patient_and_time[x] = sur_and_time[x][-1]#存活时间\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "t_img_fea contains the pretrained features of the patch.\n",
+    "t_img_fea contains the pretrained features of the patch.#patch预训练的特征\n",
     "\n",
     "{'TCGA-VR-A8EX': {'23-25.png': array([ 0.0958841 ,  0.0922773 ,  0.10698985, ..., -0.51396465,\n",
     "          3.0901225 , -1.7472196 ], dtype=float32),\n",
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "For genomic profile, we employ GSEA to generate five genomic embeddings: \n",
+    "For genomic profile, we employ GSEA to generate five genomic embeddings: #基因组嵌入\n",
     "1) Tumor Supression, 2) Oncogenesis, 3) Protein Kinases, 4) Cellular Differentiation, and 5) Cytokines and Growth.\n",
     "from https://www.gsea-msigdb.org/gsea/msigdb/gene_families.jsp?ex=1\n",
     "\n",
@@ -354,7 +354,7 @@
    "source": [
     "'''\n",
     "Data(x_img=[1406, 1024], x_rna=[5, 1024], x_cli=[10, 1024], sur_type=[1], data_id='TCGA-2H-A9GQ', data_type=[3], edge_index_image=[2, 9550], edge_index_rna=[2, 20], edge_index_cli=[2, 90])\n",
-   "Data(x_img=[1127, 1024], x_rna=[5, 1024], x_cli=[10, 1024], sur_type=[1], data_id='TCGA-L5-A4OH', data_type=[3], edge_index_image=[2, 8334], edge_index_rna=[2, 20], edge_index_cli=[2, 90])\n",
+    "Data(x_img=[1127, 1024], x_rna=[5, 1024], x_cli=[10, 1024], sur_type=[1], data_id='TCGA-L5-A4OH', data_type=[3], edge_index_image=[2, 8334], edge_index_rna=[2, 20], edge_index_cli=[2, 90])\n",
     "'''\n",
     "joblib.dump(all_data,'all_data.pkl')"
    ]
